Bug 40948 - UI: TOC dialog 'Entries - Structure - Arrow right button' does not reach most right structure element
Summary: UI: TOC dialog 'Entries - Structure - Arrow right button' does not reach most...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.4.3 release
Hardware: Other All
: high major
Assignee: Ivan Timofeev (retired)
URL:
Whiteboard: bibisected35 bibisected35older target...
Keywords: regression
: 39864 42723 44248 (view as bug list)
Depends on:
Blocks: mab3.5
  Show dependency treegraph
 
Reported: 2011-09-16 14:08 UTC by ribotb
Modified: 2012-04-08 00:42 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments
contains 2 pictures (65.43 KB, application/x-compressed)
2011-09-16 14:08 UTC, ribotb
Details
Screenshot: 'edit_index_hyperlink_disappearing_page_number.png' (30.22 KB, image/png)
2011-09-19 15:01 UTC, manj_k
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ribotb 2011-09-16 14:08:34 UTC
Created attachment 51274 [details]
contains 2 pictures

Hello, 

In a Writer document I create  a Table of contents by Insert> Indexes and Tables> Indexes and  tables. Then, right-click on the Table of contents in the document to choose Edit Index / Table because I want to add a Hyperlink on the page number:
- open Entries tab;
- in the structure, I place the cursor in the field before the page number [#];
- I click the Hyperlink button to insert tag [DH];
- the result is ok : ... [DH] [  ] [#] (see picture_1.jpg in the attached zip file);
- I click on the right scroll arrow to access the field [ ] after the field [#] to add the tag [FH];
- the structure becomes: [DH] [  ], the field [#] has disappeared (see picture_2.jpg in the attached zip file);
- I click again on the right scroll arrow: nothing happens! I can't go further in the  structure.

Bernard Ribot
Comment 1 manj_k 2011-09-19 14:59:01 UTC
Reproducible (on WinXP 32b) with 
LibO 343 release [LibreOffice 3.4.3 OOO340m1 (Build:302)]
and
LibO Master [LibO-dev 3.5.0 Build ID: 8cc839d-3dca5fd-4525197].

That works fine with
LibO 334 release [LibreOffice 3.3.4 OOO330m19 (Build:401) tag libreoffice-3.3.4.1].

This bug will occur also when you are setting 'LS' (Hyperlink start) at any other position. Impossible to set 'LF' (Hyperlink end) after '#' (Page number), because '#' has disappeared.
(See attached screenshot 'edit_index_hyperlink_disappearing_page_number.png'.)
Comment 2 manj_k 2011-09-19 15:01:50 UTC
Created attachment 51374 [details]
Screenshot: 'edit_index_hyperlink_disappearing_page_number.png'
Comment 3 Jean-Baptiste Faure 2011-10-02 12:29:44 UTC
I do not reproduce the problem with LibreOffice 3.4.3 under Ubuntu 10.04 x86_64

Best regards. JBF
Comment 4 Laurent Balland 2011-10-02 12:44:17 UTC
Hello,

An easy workaround is to suppress tab. Then right position after page number is accessible and you can add end of hyperlink. Finally add back tabulation.
Comment 5 ribotb 2011-10-02 13:02:28 UTC
Hello Laurent,

I don't understand how suppress tab ! Please give us more details. 

Thanks,
Bernard
Comment 6 Laurent Balland 2011-10-02 13:23:06 UTC
Sorry for my too short explanations. To remove the tabulation inserted in an entry, just click once on 'T' between entry name and page number; then press Del. key. That's all!
Then you can add start and end of hyperlink.
Then place a new tabulation. Do not forget to choose your character, right position for this tabulation.

Laurent BP
Comment 7 manj_k 2011-10-02 14:01:11 UTC
Another (more 'comfortable') workaround:
- First of all, set 'LS' (Hyperlink start) *after* '#' (Page number)
- Then set again 'LS' (Hyperlink start) *before* '#' (Page number)
- 'LS' after '#' will be modified to 'LF' (Hyperlink end)
[That's visible after having removed 'Tab stop' and 'Chapter number'-- see comment #6]] 
;)

But all these 'workarounds' are unacceptable for (normal) users.
Comment 8 manj_k 2011-10-02 14:11:01 UTC
Due to comment #3:
Not reproducible on Linux in general? 
(Discussion on French 'discuss-at-fr.libreoffice.org')
Comment 9 ribotb 2011-10-03 01:44:53 UTC
Hello Laurent,

Your workaround is ok. I lacked the information to remove the 'T' after its selection (press Del key).

But I say, like manj k : 'all these workarounds are unacceptable for (normal)users.

Bernard
Comment 10 ribotb 2011-10-03 02:00:06 UTC
I forgot to mention that my environment is Windows 7 SP1.
Comment 11 manj_k 2011-10-03 04:54:33 UTC
As mentioned by Jean-Baptiste Faure on French 'discuss-at-fr.libreoffice.org' [1]:

Navigation and setting the hyperlink '[LS][#][LF]' with the keyboard (arrow keys) 'Right'/'Left' works fine (for me, on WinXP).

[1] http://nabble.documentfoundation.org/Writer-3-4-3-Ajouter-hyperlien-sur-numero-de-page-dans-index-table-des-matieres-tc3338718.html
Comment 12 manj_k 2011-11-08 14:30:37 UTC
*** Bug 42723 has been marked as a duplicate of this bug. ***
Comment 13 pierre-yves samyn 2011-12-17 08:43:45 UTC
Hello

Reproduced with Windows 7 - LOdev 3.5.0 
Version ID : 7362ca8-b5a8e65-af86909-d471f98-61464c4

Regards
PYS
Comment 14 Björn Michaelsen 2011-12-23 13:25:46 UTC
Since all new unconfirmed bugs start in state UNCONFIRMED now and old unconfirmed bugs were moved to NEEDINFO with a explanatory comment, all bugs promoted above those bug states to NEW and later are automatically confirmed making the CONFIRMED whiteboard status redundant. Thus it will be removed.
Comment 15 manj_k 2011-12-28 16:48:44 UTC
*** Bug 44248 has been marked as a duplicate of this bug. ***
Comment 16 Björn Michaelsen 2012-03-01 08:18:36 UTC
regression does appear in oldest version of bibisect-3.5.tar.lzma and must be older.
Comment 17 manj_k 2012-03-03 14:45:34 UTC
*** Bug 39864 has been marked as a duplicate of this bug. ***
Comment 18 Rainer Bielefeld Retired 2012-04-03 11:07:28 UTC
Still [Reproducible] with parallel  installation of  Master "LOdev 3.6.0alpha0+  – WIN7 Home Premium (64bit) ENGLISH UI [Build ID: 3ddf85d-6299bf6-879ce3]" (tinderbox: Win-x86@6-fast pull time 2012-03-30 00:06:13)

3.4 lifecycle is terminated, so shift to “Bug 37361 LibreOffice 3.5 most annoying bugs”

@Ivan:
You have some experience with such UI problems - please set Status to ASSIGNED and add yourself to "Assigned To" if you accept this Bug
Comment 19 Ivan Timofeev (retired) 2012-04-03 23:26:00 UTC
Regression from http://cgit.freedesktop.org/libreoffice/core/commit/?id=39b8a5f87f55abe53488c9c3c35b65fb0df84cd. I will fix it.
Comment 20 Not Assigned 2012-04-04 08:45:07 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b49f69aee6f48fb9367a2a9548182dcd84eb5296

fdo#40948: TOC dialog, Entries tab: the right arrow button does not work
Comment 21 Not Assigned 2012-04-05 07:30:06 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=37c1a9fde189f3010eec7392c44404e403555c52&g=libreoffice-3-5

fdo#40948: TOC dialog, Entries tab: the right arrow button does not work


It will be available in LibreOffice 3.5.3.
Comment 22 manj_k 2012-04-05 08:39:27 UTC
Verified fix with 
LOdev 3.6.0alpha0+ · Build ID: 09d98df-6299bf6-ec8645
[Win-x86@6-fast · master~2012-04-04_23.10.16... · on WinXP 32b].

The right arrow button works fine again.
Thanks. :)
Comment 23 Jean-Baptiste Faure 2012-04-05 21:37:53 UTC
Verified fix in LibreOffice 3.5.3rc0+ Version ID : 7a9ea6e-a73d29c-6845e52-f269e46-31eca31 under Ubuntu 11.10

Thank you.
Comment 24 ribotb 2012-04-08 00:42:57 UTC
Thank you to Ivan Timofeev.

Bernard Ribot