fdo#40948: TOC dialog, Entries tab: the right arrow button does not work

regression from 39b8a5f87f55abe53488c9c3c35b65fb0df84cd.